# BowEngine

./: .gitignore  CMakeLists.txt  Makefile
src/: CMakeLists.txt
src/engine/: AABB.h  AABBTree.cpp  AABBTree.h  AbstractRenderObject.h  App.cpp  App.h  BufferObjects.cpp  BufferObjects.h  CMakeLists.txt  Camera.h  Game.cpp  Game.h  Helper.cpp  Helper.h  LargeMesh.cpp  Loader.cpp  Material.h  MaterialInputs.cpp  MaterialInputs.h  MatrixInput.cpp  MatrixInput.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderCommand.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  ResourceManager.h  SceneData.cpp  SceneGraph.cpp  SceneGraph.h  Shader.cpp  Shader.h  ShaderFX.cpp  ShaderFX.h  ShaderInstanceManager.cpp  ShaderInstanceManager.h  (+11 more)
src/game/: CMakeLists.txt  Game.cpp  Loader.cpp
src/imgui/: CMakeLists.txt  imgui_impl_bowie.cpp  imgui_impl_bowie.h  imgui_impl_sdl.cpp
vs/: sdlgame.sln  sdlgame.vcxproj  sdlgame.vcxproj.filters
